--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v "$PWD":/workspace \
             -w /workspace \
-            gcr.io/cloud-builders/docker /bin/bash -c '
+            gcr.io/cloud-builders/docker /bin/sh -c '
               apt-get update && apt-get install -y curl apt-transport-https ca-certificates gnupg lsb-release git &&
               echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" > /etc/apt/sources.list.d/google-cloud-sdk.list &&
               curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | gpg --dearmor > /usr/share/keyrings/cloud.google.gpg &&
