--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,38 +9,42 @@ jobs:
   build:
     runs-on: [self-hosted]
 
+    container:
+      image: google/cloud-sdk:slim
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker and gcloud in container
+      - name: Install Docker CLI
         run: |
-          docker run --rm \
-            -v /var/run/docker.sock:/var/run/docker.sock \
-            -v "$PWD":/workspace \
-            -w /workspace \
-            gcr.io/cloud-builders/docker /bin/sh -c '
-              apt-get update && apt-get install -y curl apt-transport-https ca-certificates gnupg lsb-release git &&
-              echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" > /etc/apt/sources.list.d/google-cloud-sdk.list &&
-              curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | gpg --dearmor > /usr/share/keyrings/cloud.google.gpg &&
-              apt-get update && apt-get install -y google-cloud-cli &&
-              
-              REPO_NAME=$(basename "${GITHUB_REPOSITORY}") &&
-              IMAGE="europe-west1-docker.pkg.dev/hungerstation-hackathon-6957/build-day-25-repo/${REPO_NAME}:${GITHUB_SHA}" &&
+          apt-get update
+          apt-get install -y docker.io
 
-              docker build -t "$IMAGE" . &&
-              gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet &&
-              docker push "$IMAGE" &&
+      - name: Set image name
+        id: vars
+        run: |
+          REPO_NAME=$(basename "$GITHUB_REPOSITORY")
+          IMAGE="europe-west1-docker.pkg.dev/hungerstation-hackathon-6957/build-day-25-repo/${REPO_NAME}:${GITHUB_SHA}"
+          echo "image=${IMAGE}" >> "$GITHUB_OUTPUT"
 
-              sed -i "s|\(image: .*ingestion-service:\).*|\1${GITHUB_SHA}|" infra/k8s/base.yaml &&
+      - name: Build image
+        run: docker build -t "${{ steps.vars.outputs.image }}" .
 
-              git config user.name "github-actions" &&
-              git config user.email "github-actions@github.com" &&
-              git add infra/k8s/base.yaml &&
-              git commit -m "chore: update ingestion-service image to ${GITHUB_SHA}" || echo "No changes to commit" &&
-              git push origin HEAD:${GITHUB_REF#refs/heads/} --force
-            '
-        env:
-          GITHUB_SHA: ${{ github.sha }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_REF: ${{ github.ref }}
+      - name: Push image
+        run: |
+          gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet
+          docker push "${{ steps.vars.outputs.image }}"
+
+      - name: Update image tag
+        run: |
+          sed -i "s|\(image: .*ingestion-service:\).*|\1${GITHUB_SHA}|" infra/k8s/base.yaml
+
+      - name: Commit updated manifest back to repo
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add infra/k8s/base.yaml
+          git commit -m "chore: update ingestion-service image to ${GITHUB_SHA}" || echo "No changes to commit"
+          git push origin HEAD:${GITHUB_REF#refs/heads/} --force
