--- a/infra/k8s/base.yaml
+++ b/infra/k8s/base.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ingestion-config
+  namespace: team24
 data:
   CONTROL_SERVER_URL: "http://control-server.hs-control.svc.cluster.local:9000"
   DATABASE_URL: "postgres://postgres:postgres@postgres:5432/ingestion?sslmode=disable"
@@ -18,6 +19,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgres-init-script
+  namespace: team24
 data:
   init.sql: |
     -- Initialize the events table and indexes
@@ -52,6 +54,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ingestion-service
+  namespace: team24
   labels:
     app: ingestion-service
     version: v1
@@ -115,6 +118,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ingestion-service
+  namespace: team24
   labels:
     app: ingestion-service
 spec:
@@ -133,6 +137,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: ingestion-service-monitor
+  namespace: team24
   labels:
     # This label must match the 'serviceMonitorSelector' in Prometheus
     release: monitoring
@@ -156,6 +161,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
+  namespace: team24
 spec:
   accessModes:
     - ReadWriteOnce
@@ -168,6 +174,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
+  namespace: team24
   labels:
     app: postgres
 spec:
@@ -232,6 +239,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: team24
   labels:
     app: postgres
 spec:
@@ -250,6 +258,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: istio-proxies
+  namespace: team24
   labels:
     release: monitoring
     app.kubernetes.io/instance: monitoring
